# presto

./: .gitignore  CHANGELOG.md  Cargo.toml  ORGANIZATION.md  README.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: rust.yml
docs/: ARCHITECTURE.md  CNAME  CONFIG.md  CONTROLS.md  DEVELOPMENT.md  MPRIS.md  ORGANIZATION.md  README.md  TROUBLESHOOTING.md  config.example.toml
src/: app.rs  audio.rs  config.rs  library.rs  main.rs  mpris.rs  ui.rs
src/app/: model.rs  tests.rs
src/audio/: player.rs  queue.rs  sink.rs  tests.rs  thread.rs  types.rs
src/config/: load.rs  schema.rs  tests.rs
src/mpris/: tests.rs
src/runtime/: event_loop.rs  mod.rs  mpris_sync.rs  settings.rs  startup.rs  state.rs
src/ui/: layout.rs  lyrics.rs  mod.rs  panes.rs  text.rs
