[package]
name = "presto"
version = "0.1.0"
edition = "2024"

[dependencies]
crossterm = "0.29.0"
ratatui = "0.30.0"
rodio = "0.21.1"
walkdir = "2.5.0"
async-io = "2.6.0"
zbus = { version = "4.4.0", default-features = true }
zvariant = "4.2.0"
rand = "0.8"
lofty = "0.18"
config = { version = "0.15.19", features = ["toml"] }
serde = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
